# rospi-utils

./: README.md
rospi_gpio/gpio_interface/: CMakeLists.txt  package.xml
rospi_gpio/gpio_interface/include/gpio_interface/: fake_vocal_interpreter_node.h  fake_vocal_wake_node.h  leds_button_node.h
rospi_gpio/gpio_interface/launch/: leds_button.launch  rpi_gpio_witai.launch
rospi_gpio/gpio_interface/scripts/: fake_user_identifier.py  launchGpio_leds_button.bash  simple_json_vocal_interpreter.py
rospi_gpio/gpio_interface/src/: fake_vocal_interpreter_node.cpp  fake_vocal_wake_node.cpp  leds_button_node.cpp
rospi_gpio/gpio_messages/: CMakeLists.txt  package.xml
rospi_gpio/gpio_messages/msg/: io_description.msg  io_states.msg
rospi_gpio/rospi_gpio/: CMakeLists.txt  package.xml
rospi_image/image_messages/: CMakeLists.txt  package.xml
rospi_image/rospi_image/: CMakeLists.txt  package.xml
rospi_sound/rospi_sound/: CMakeLists.txt  package.xml
rospi_sound/sound_messages/: CMakeLists.txt  package.xml
rospi_sound/sound_messages/msg/: CloudNodeState.msg  WitdOutput.msg
rospi_sound/sound_messages/srv/: WitdCommand.srv
rospi_sound/sound_wit_ai/: CMakeLists.txt  package.xml
rospi_sound/sound_wit_ai/include/sound_wit_ai/: ACCESS_TOKEN.h  witd_node.h
rospi_sound/sound_wit_ai/launch/: witd_node.launch
rospi_sound/sound_wit_ai/scripts/: launchWitd.bash  reqStart.bash  reqStop.bash
rospi_sound/sound_wit_ai/src/: fake_witd_node.cpp  witd_node.cpp
rospi_utils/: CMakeLists.txt  README.md  package.xml
rospi_utils/launch/: rpi_all.launch
