<?xml version="1.0"?>
<package>
  <name>gpio_interface</name>
  <version>0.0.0</version>
  <description>The gpio_interface package</description>

  <maintainer email="valentin.vergez@gmail.com">Valentin Vergez</maintainer>

  <license>GPLv3</license>

  <url type="repository">https://github.com/ValentinVERGEZ/rospi_utils</url>
  <url type="bugtracker">https://github.com/ValentinVERGEZ/rospi_utils/issues</url>
  <url type="website">https://github.com/ValentinVERGEZ/rospi_utils/wiki</url>

  <author email="valentin.vergez@gmail.com">Valentin Vergez</author>

  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>gpio_messages</build_depend>
  <build_depend>sound_messages</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>gpio_messages</run_depend>
  <run_depend>sound_messages</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
